--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
 				</div>
 				<div class="form-group">
 					<label for="">會員密碼：</label>
-					<input type="password" class="form-input" required>
+					<input type="password" name="password" class="form-input" required>
 					<span class="small_prompt">請輸入密碼  例如：後端注意!!!</span>
 				</div>
 				<div class="btn">
@@ -60,7 +60,6 @@
 			
 		</div>
 		<div class="footer">
-			<p>想回首頁??點這邊喔!!</p>
 			<p>溫馨提醒：字體已加大，方便瀏覽</p>
 		</div>
 	</div>
