--- a/group.html
+++ b/group.html
@@ -44,7 +44,7 @@
         </div>
         <div class="group_text">
             <p>資管二甲&nbsp;&nbsp;吳學沅&nbsp;&nbsp;10744125</p>
-            <p>興趣：打傳說</p>
+            <p>興趣：寫程式、打傳說</p>
             <p>分工：前端-網頁排版與整體CSS</p>
             <p>心得：(以下空白)</p>
         </div>
