--- a/group.html
+++ b/group.html
@@ -45,8 +45,8 @@
         <div class="group_text">
             <p>資管二甲&nbsp;&nbsp;吳學沅&nbsp;&nbsp;10744125</p>
             <p>興趣：寫程式、打傳說</p>
-            <p>分工：前端-網頁排版與整體CSS</p>
-            <p>心得：(以下空白)</p>
+            <p>分工：前端-網頁排版與整體CSS 60%、前端PPT、說明文件</p>
+            <p>心得：經由這次B2C期末專案，學到很多東西，體認到前端與後端整合的重要性，非常感謝前端、後端組員們共同完成了此次的期末專案。</p>
         </div>
     </div>
     <br>
@@ -68,9 +68,9 @@
         </div>
         <div class="group_text">
             <p>資管二甲&nbsp;&nbsp;徐世寰&nbsp;&nbsp;10744124</p>
-            <p>興趣：(以下空白)</p>
-            <p>分工：前端-(大哥我應該怎麼寫才對)</p>
-            <p>心得：(以下空白)</p>
+            <p>興趣：軍事</p>
+            <p>分工：前端-網頁排版與整體CSS 40%</p>
+            <p>心得：這次我感覺前端做得不錯，非常感謝前端後端組員們合心協力共同完成了此次的期末專案，相信後端也能整合的很成功。</p>
         </div>     
     </div>
     <br>
