--- a/group.html
+++ b/group.html
@@ -56,9 +56,9 @@
         </div>
         <div class="group_text">
             <p>資管二乙&nbsp;&nbsp;呂雪薇&nbsp;&nbsp;10744224</p>
-            <p>興趣：(以下空白)</p>
-            <p>分工：後端-(以下空白)</p>
-            <p>心得：(以下空白)</p>
+            <p>興趣：打手遊與線上遊戲</p>
+            <p>分工：後端-50%</p>
+            <p>心得：這次網路程式真的讓我體會了網路程式真的不簡單</p>
         </div>     
     </div>
     <br>
@@ -80,9 +80,9 @@
         </div>
         <div class="group_text">
             <p>資管二乙&nbsp;&nbsp;陳柏勳&nbsp;&nbsp;10744231</p>
-            <p>興趣：(以下空白)</p>
-            <p>分工：後端-(以下空白))</p>
-            <p>心得：(以下空白)</p>
+            <p>興趣：作模型</p>
+            <p>分工：後端-50%</p>
+            <p>心得：很難真的超難的，藉由這次的專題我也了解到，前後端整合的重要性</p>
         </div>    
     </div>
     <div style="clear:both;"></div><!--這是用來清除上方的浮動效果-->
