--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
 	    </nav>
     </div>  <!--選單的部分為止-->
     <div style="clear:both;"></div><!--這是用來清除上方的浮動效果-->
-    	<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;看個風景，放鬆一下，繼續奮鬥吧!!</h1>
     	<div class="myDiv"></div>
+        <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;網站地圖導覽</h1>
+        <p Align=center><img src="assets/img/map.jpg" alt="Workplace" usemap="#mains" style="width:1300px;height:500px;" center></p><br>
+        <map name="mains"> 
+            <area shape="rect" coords="165,22,469,122" alt="Computer" href="product_literature.html"> <!--文學類-->
+            <area shape="rect" coords="25,267,318,367" alt="Computer" href="product_philosophy.html">  <!--哲學類-->
+            <area shape="rect" coords="349,270,652,362" alt="Computer" href="product_history.html">  <!--歷史類-->
+            <area shape="rect" coords="170,137,489,249" alt="Computer" href="product.html">  <!--產品分類-->
+            <area shape="rect" coords="721,73,1233,209" alt="Computer" href="ranking.html">  <!--熱門排行-->
+            <area shape="rect" coords="718,249,1233,387" alt="Computer" href="board.html">  <!--聯絡我們-->
+        </map>
     	<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;館長推薦</h1>
         <div id="produut_one">
     		<div class="product_card">
